# test-terragoat

./: .boostignore  README.md  pyproject.toml  sectool-config.json  sectool-config.json-violation
.github/workflows/: boost-dev.yml  boost-prod.yml  devel.yml  test-oidc.yml
terraform/aws/: ec2.tf  ecr.tf  eks.tf  elb.tf
terraform/azure/: aks copy.tf  aks slef.tf  aks-slef2.tf  aks.tf
terraform/gcp/: networks.tf
